--- a/budsjettapp/src/main/resources/static/styles/style.css
+++ b/budsjettapp/src/main/resources/static/styles/style.css
@@ -7,19 +7,61 @@ body{
 }
 
 .side-wrapper{
-    width: 400px;
+    width: 600px;
     justify-self: center
 }
 
+.budsjett-forbruk{
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+}
 
-/*___Budsjett___*/
-.budsjett-wrapper{
+
+/*___Ark på venstre___*/
+.ark-innhold-wrapper{
+    display: flex;
+    align-items: stretch;
+}
+.ark-wrapper{
+    flex-grow: 2;
+    font-size: smaller;
+    text-align: left;
+    position: relative;
+}
+.legg-til-ark{
+    border: 1px solid rgb(95, 133, 117);
+    border-radius: 20px;
+    min-width: 23px;
+    max-width: 23px;
+    min-height: 23px;
+    max-height: 23px;
+    text-align: center;
+    background-color: white;
+    color: rgb(95, 133, 117);
+    font-size: medium;
+    cursor: pointer;
+    position: absolute;
+    left: 0;
+    transition: transform 0.3s ease-in-out;
+}
+.legg-til-ark:hover{
+    transform: scale(1.05);
+}
+
+.wrapper{
     width: 100%;
     position: relative;
     
 }
 
-.budsjett-header{
+.header{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,16 +71,21 @@ body{
     height: 40px;
 }
 .budsjett-h2{
-    position: absolute;
-    left: 0px;
+    cursor: pointer;
     font-weight: 500;
+    transition: transform 0.3s ease-in-out;
+    user-select: none;
 }
-.budsjett-tittel-og-knapp{
+.budsjett-h2:hover{
+    transform: scale(1.02);
+}
+.tittel-og-knapp{
     position: absolute;
     right: 0px;
+    
 }
-.budsjett-tittel{
-    width: 80px;
+.tittel{
+    width: 160px;
     min-height: 25px;
     max-height: 25px;
     border-radius: 10px;
@@ -56,10 +103,10 @@ body{
     padding: 0 16px;
 
 }
-.budsjett-tittel:hover{
-    transform: scale(1.02);
+.tittel:hover{
+    transform: scale(1.05);
 }
-.budsjett-header-knapp{
+.header-knapp{
     border-radius: 15px;
     border: 0px solid black;
     min-width: 30px;
@@ -74,11 +121,10 @@ body{
     color: white;
     transition: transform 0.3s ease-in-out;
 }
-.budsjett-header-knapp:hover{
+.header-knapp:hover{
     transform: scale(1.1);
 }
-
-.budsjett-container{
+.container{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -86,10 +132,52 @@ body{
     border: 1px solid rgb(95, 133, 117);
     padding: 20px;
     border-radius: 10px;
+    flex-grow: 8;
+    position: relative;
 }
 
+.ark-tittel-wrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    gap: 5px;
+    width: 100%;
+    position: relative;
+}
+.ark-tittel{
+    width: 160px;
+    min-height: 25px;
+    max-height: 25px;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out;
+    box-sizing: border-box;
+    font-family: inherit;
+    vertical-align: baseline;
+    font-weight: 400;
+    line-height: 1.29;
+    letter-spacing: .16px;
+    border-radius: 0;
+    outline: 2px solid transparent;
+    border: none;
+    border-bottom: 1px solid rgb(95, 133, 117);
+    padding: 0 16px;
+    width: 120px;
+    
+}
+.ark-knapp{
+    width: 20px;
+    border: 0px;
+    cursor: pointer;
+    background-image: url("../img/diskette.png");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+/*___Budsjett___*/
 .budsjett-item {
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding: 5px;
     border: 1px solid rgb(95, 133, 117);
     border-radius: 10px;
@@ -121,12 +209,61 @@ body{
     border-radius: 5px;
     border: 1px solid black;
     width: 50px;
+    font-family: inherit;
 }
 .budsjett-item-knapp{
     border-radius: 5px;
     cursor: pointer;
     border: 1px solid black;
+    font-family: inherit;
 }
 
 
 /*___Forbruk___*/
+
+.forbruk-h2{
+    font-weight: 500;
+    color: grey;
+    cursor: pointer;
+    user-select: none;
+    transition: transform 0.3s ease-in-out;
+}
+.forbruk-h2:hover{
+    transform: scale(1.05);
+}
+.forbruk-item {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 5px;
+    border: 1px solid rgb(95, 133, 117);
+    border-radius: 10px;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    transition: transform 0.3s ease-in-out;
+}
+.forbruk-item:hover{
+    transform: scale(1.02);
+}
+.forbruk-label{
+    position: absolute;
+    left: 10px;
+}
+.forbruk-verdi{
+    position: absolute;
+    right: 10px;
+}
+.forbruk-item-tall{
+    border-radius: 5px;
+    border: 1px solid black;
+    width: 50px;
+    font-family: inherit;
+}
+.forbruk-item-knapp{
+    border-radius: 5px;
+    cursor: pointer;
+    border: 1px solid black;
+    font-family: inherit;
+}
