--- a/budsjettapp/src/main/resources/static/styles/style.css
+++ b/budsjettapp/src/main/resources/static/styles/style.css
@@ -273,3 +273,23 @@ body{
     width: 50px;
     font-family: inherit;
 }
+  
+.kontekstmeny {
+position: absolute;
+display: none;
+list-style: none;
+padding: 10px;
+background: white;
+border: 1px solid #ccc;
+box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
+z-index: 1000;
+}
+
+.kontekstmeny li {
+padding: 5px 10px;
+cursor: pointer;
+}
+
+.kontekstmeny li:hover {
+background-color: #eee;
+}
