--- a/budsjettapp/src/main/resources/static/styles/style.css
+++ b/budsjettapp/src/main/resources/static/styles/style.css
@@ -217,6 +217,20 @@ body{
     border: 1px solid black;
     font-family: inherit;
 }
+.budsjett-item-container{
+    width: 100%;
+    position: relative;
+}
+.budsjett-sum-wrapper{
+    width: 100%;
+    display: none;
+    margin-top: 30px;
+}
+.budsjett-sum{
+    text-align: left;
+    padding-left: 10px;
+    font-size: small;
+}
 
 
 /*___Forbruk___*/
@@ -292,4 +306,8 @@ cursor: pointer;
 
 .kontekstmeny li:hover {
 background-color: #eee;
+}
+
+.grønn-hr{
+    border: 1px solid rgb(95, 133, 117);
 }
